Updated dates to be more consistent, using a style like '13:45 Feb 24'. Closes #20.

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -916,6 +916,9 @@ table.table-list thead th.source{
 table.table-list thead th.date{
     width: 15%;
 }
+table.table-list tbody td.date{
+	white-space: nowrap;
+}
 
 table.table-list tbody tr td{
     padding: 5px;
