--- a/plugins/fullscreenmap/views/css/fullscreenmap.css
+++ b/plugins/fullscreenmap/views/css/fullscreenmap.css
@@ -1,31 +1,28 @@
 div.fullscreenmap-btn{
-    float:right;
-	background-image:url(../images/window.png);
-	background-repeat:no-repeat;
-	background-position:5px;
-	background-color:#eee;
-	padding:5px 5px 5px 28px;
-	line-height:16px;
-	border:1px solid #ccc;
+    background:#111 url(../images/window.png) 5px 5px no-repeat;
+    padding:5px 5px 5px 28px;
+    line-height:16px;
+    border: none;
+    width: 100px;
+    margin: -16px 0 0px  546px;
 }
 div.fullscreenmap-btn a{
-	padding:0 5px 0 5px;
-	background-color:darkblue;
-	color:#fff;
+    padding:0 5px;
+    color:#fff;
 }
 div.fullscreenmap_cats{
-	width:293px;
-	height:600px;
-	border:4px solid #fff;
-	z-index:1001;
-	position:absolute;
-	overflow:auto;
-	top:60px;
-	right:60px;
+    width:293px;
+    height:600px;
+    border:4px solid #fff;
+    z-index:1001;
+    position:absolute;
+    overflow:auto;
+    top:60px;
+    right:60px;
 }
 div.fullscreenmap_window_title{
-	background:#999;
-	color:fff;
-	text-align:center;
-	font-size:16px;
+    background:#999;
+    color:#fff;
+    text-align:center;
+    font-size:16px;
 }
