--- a/themes/ccnz/css/style.css
+++ b/themes/ccnz/css/style.css
@@ -132,6 +132,8 @@ div#logo span {
     font: 16px/1em 'Droid Sans','Trebuchet MS', Arial, san-serif;
     margin: 0 0 0 8px;
     letter-spacing: 0.03em;
+    display: block;
+    clear: left;
 }
 
 /* main body setup */
@@ -364,6 +366,7 @@ div.submit-incident {
     margin: 30px 0 0;
     float: right;
     width: auto;
+    background-color: #fe1409;
     background-image: -webkit-gradient(
         linear,
         left bottom,
@@ -2127,6 +2130,7 @@ ul.pager li a.active {background:#f2f7fa;}
 div.green-box {
     margin:5px 0 10px 0;
     padding:10px 0;
+    background-color: #696969;
 background-image: -webkit-gradient(
     linear,
     left bottom,
@@ -2199,8 +2203,6 @@ div.green-box ul, div.red-box ul{
 .right-cap	{ -webkit-border-top-right-radius: 0; -webkit-border-bottom-right-radius: 0; -moz-border-radius-topright: 0; -moz-border-radius-bottomright: 0; border-top-right-radius: 0; border-bottom-right-radius: 0; }
 .bottom-cap	{ -webkit-border-top-left-radius: 0; -webkit-border-top-right-radius: 0; -moz-border-radius-topright: 0; -moz-border-radius-topleft: 0; border-top-right-radius: 0; border-top-left-radius: 0; }
 .left-cap		{ -webkit-border-top-left-radius: 0; -webkit-border-bottom-left-radius: 0; -moz-border-radius-topleft: 0; -moz-border-radius-bottomleft: 0; border-top-left-radius: 0; border-bottom-left-radius: 0; }
-
-
 
 #threesteps {
     height:211px; margin-bottom:15px;
