Hack to hide social networking buttons till we have them set up

--- a/themes/ccnz/css/style.css
+++ b/themes/ccnz/css/style.css
@@ -649,6 +649,7 @@ div.howto-report .submit-incident a{
 }
 
 div.social-buttons {
+    display: none; /* Temporary hack to hide social networking buttons */
     float:left;
     clear: left;
     padding: 15px;
