Restoring the .hidden CSS class

--- a/themes/ccnz/css/style.css
+++ b/themes/ccnz/css/style.css
@@ -2309,3 +2309,8 @@ div.graph-holder, div.slider-holder {
 #threesteps form a:hover {
     background-color:#555;
 }
+
+.hidden {
+    position: absolute;
+    left: -99999px;	
+}
