--- a/themes/tedx/css/_default.css
+++ b/themes/tedx/css/_default.css
@@ -45,6 +45,7 @@ h5, h4 {
 body#page { background:#e4e1dd url(../images/bg_transparent-lines.png) repeat; }
 
 /*div#middle { background:transparent url(../images/bg_top-cap.png) top no-repeat; }*/
+div#middle { margin-top: 584px; }
 
 .big-block {   }
 .page-main #main { padding:0px 10px; }
@@ -101,7 +102,7 @@ div.search-form input.searchbtn {
 }
 
 /* header */
-div#header { height:auto; margin:18px 0; }
+div#header { margin: 0 0 0 -480px; padding: 16px 0 36px 0; background: #fff; position: absolute; top: 30px; left: 50%; z-index: 10; width: 960px; height: auto; }
 
 /* logo box */
 div#logo {
@@ -201,11 +202,13 @@ div#right { position:absolute; z-index:1000; }
   
 
 /* home page map */
-div.map { width:auto; border:1px solid #fff; border-top:0; position:relative; }
-#mapStatus { width:auto; float:none; overflow:auto; border:1px solid #fff; }
+div.map-container { position:absolute; top: 30px; left: 0; width: 100%; height: 584px; }
+div.map { width:auto; height: 584px; border: 0; position:relative; }
+/*#mapStatus { width:auto; float:none; overflow:auto; border:1px solid #fff; }*/
+#mapStatus { display:none; }
 
 /* home page timeline */
-div.slider-holder,
+div.slider-holder { }
 div.graph-holder { display:none; }
 
 
@@ -213,7 +216,7 @@ div.graph-holder { display:none; }
 div.additional-content { display:none; }
 
 /* Home Page Twitter / Mainstream News blocks */
-div.content-container { background:transparent; padding:10px; }
+div.content-container { background:transparent; padding:10px;}
 
 div.content-block { position:relative; margin:0 18px; background:#eeedea; }
 div.content-block h5 { float:left; position:absolute; top:-18px; left:-18px; padding:5px; border:7px solid #fff; background:#529bf5; }
