--- a/themes/tedx/css/_default.css
+++ b/themes/tedx/css/_default.css
@@ -42,7 +42,7 @@ h5, h4 {
 }
 
 /* structural divs */
-body#page { background:#e4e1dd url(../images/bg_transparent-lines.png) repeat; }
+body#page { background: #fff; }
 
 /*div#middle { background:transparent url(../images/bg_top-cap.png) top no-repeat; }*/
 div#middle { margin-top: 584px; }
@@ -60,7 +60,8 @@ div#middle { margin-top: 584px; }
 }
 div#searchbox {
   position: absolute;
-  right: 0;
+  right: 36px;
+  top: 16px;
   border: none;
   background: transparent;
   width: auto;
@@ -102,7 +103,7 @@ div.search-form input.searchbtn {
 }
 
 /* header */
-div#header { margin: 0 0 0 -480px; padding: 16px 0 36px 0; background: #fff; position: absolute; top: 30px; left: 50%; z-index: 10; width: 960px; height: auto; }
+div#header { margin: 0 0 0 -480px; padding: 16px 36px 36px 36px; background: #fff; position: absolute; top: 0px; left: 50%; z-index: 10; width: 888px /*960-(36*2)*/; height: auto; }
 
 /* logo box */
 div#logo {
@@ -202,10 +203,13 @@ div#right { position:absolute; z-index:1000; }
   
 
 /* home page map */
-div.map-container { position:absolute; top: 30px; left: 0; width: 100%; height: 584px; }
+div.map-container { position:absolute; top: 0px; left: 0; width: 100%; height: 584px; }
 div.map { width:auto; height: 584px; border: 0; position:relative; }
 /*#mapStatus { width:auto; float:none; overflow:auto; border:1px solid #fff; }*/
 #mapStatus { display:none; }
+
+.olControlPanZoomBar { margin-top: 95px; }
+div.olControlLayerSwitcher { margin-top: 80px; }
 
 /* home page timeline */
 div.slider-holder { }
@@ -254,7 +258,7 @@ div.report-additional-reports h5 { font-family: Arial, sans-serif;  }
 }
 /* footer */
 div#footer {
-  background: #000;
+  background: #fff;
 }
 div#underfooter { background:transparent; }
 
