--- a/themes/tedx/css/_default.css
+++ b/themes/tedx/css/_default.css
@@ -254,7 +254,12 @@ div.content-block .report .report-image {width: 160px; height: 90px; overflow: h
 div.content-block .report .report-title { }
 div.content-block .report .report-location { font-weight: bold; color: #4e4e4e }
 div.content-block .report .report-date { color: #4e4e4e; font-size: 0.8em; }
-
+div.content-block .report a:hover {
+  text-decoration: none;
+}
+div.content-block .report a:hover .report-title {
+  text-decoration: underline;
+}
 
 /* reports listing page */
 #content .big-block { border:1px solid #fff; border-top:0; margin:0 10px; background:#EEEDEA; padding:18px; }
