--- a/media/css/openlayers.css
+++ b/media/css/openlayers.css
@@ -1,10 +1,10 @@
 .infowindow{
-	margin:20px 0 0 0;
+	margin:00px 0 0 0;
 	position:relative;
 	padding:0;
 }
 .infowindow .infowindow_content{
-	width:250px;
+	width:240px;
 	float:left;
 }
 .infowindow h2{
@@ -14,16 +14,13 @@
 	font-size:14px;
 }
 .infowindow .infowindow_list{
-	margin-bottom:10px;
+	margin-bottom:0;
 	font-size:14px;
 	font-weight:bold;
 }
 .infowindow .infowindow_image{
-	float:left;
-	margin-right:10px;
 }
 	.infowindow .infowindow_image img{
-		border:1px solid #3764aa;
 	}
 .infowindow ul{
 	font-weight:bold;
@@ -188,7 +185,7 @@ div.olControlMousePosition {
 }
 
 .olPopupContent {
-    padding:5px;
+    padding:0px;
     overflow: auto;
 }    
 .olControlNavToolbar { 
