--- a/themes/tedx/css/_default.css
+++ b/themes/tedx/css/_default.css
@@ -233,6 +233,9 @@ div.map { width:auto; height: 584px; border: 0; position:relative; }
 .infowindow .infowindow_image { float: none; margin: 0; }
 .infowindow a, .infowindow a:visited { color: #fff; }
 .infowindow .infowindow_content { padding: 5px; width: 230px; }
+.infowindow .next {position: absolute; top: 50%; right: 5px; width: 25px; height: 40px; margin-top: -40px; line-height: 40px; text-align: right;}
+.infowindow .prev {position: absolute; top: 50%; left: 5px; width: 25px; height: 40px;  margin-top: -40px; line-height: 40px; text-align: left;}
+
 
 body.page-main .olControlPanZoomBar { margin-top: 95px; display: none; }
 body.page-main div.olControlLayerSwitcher { margin-top: 80px; display: none; }
