--- a/media/css/openlayers.css
+++ b/media/css/openlayers.css
@@ -2,6 +2,7 @@
 	margin:00px 0 0 0;
 	position:relative;
 	padding:0;
+	border: 1px solid rgba(255, 255, 255, 0.05);
 }
 .infowindow .infowindow_content{
 }
@@ -13,8 +14,12 @@
 }
 .infowindow .infowindow_list{
 	margin-bottom:0;
-	font-size:14px;
+	font-size:11px;
 	font-weight:bold;
+	padding-top: 4px;
+	padding-bottom: 2px;
+	padding-right: 2px;
+	padding-left: 2px;
 }
 .infowindow .infowindow_image{
 }
@@ -24,6 +29,7 @@
 	font-weight:bold;
 	margin:0 0 0 1em;
 	padding:0;
+	color: #FFF;
 }
 .infowindow li{
 	list-style-type: square;
