--- a/themes/tedx/css/_default.css
+++ b/themes/tedx/css/_default.css
@@ -95,13 +95,14 @@ div.search-form input.text {
   padding: 3px 5px 4px 25px;
   background: transparent url('../images/search-icon.png') 5px 50% no-repeat;
   color: #4e4e4e;
+  height: 30px;
 }
 div.search-form input.text:focus {
   border: 1px solid #e1e1e1;
 }
 div.search-form input.searchbtn {
   width: auto;
-  height: auto;
+  height: 39px;
   border: 1px solid #e1e1e1;
   border-radius: 0 2px 2px 0;
   border-left: 0;
@@ -119,7 +120,7 @@ div.search-form input.searchbtn {
 }
 
 /* header */
-div#header { margin: 0 0 16px 0; padding: 16px 36px 36px 36px; background: #fff; height: auto; box-shadow: 0px 5px 20px 0px rgba(78,78,78,0.6); }
+div#header { margin: 0 0 16px 0; padding: 16px 36px 36px 36px; background: #fff; height: auto; box-shadow: 0px 5px 15px 0px rgba(78,78,78,0.3); }
 
 body.page-main div#header { margin: 0 0 0 -480px; padding: 16px 36px 36px 36px; background: #fff; position: absolute; top: 0px; left: 50%; z-index: 10; width: 888px /*960-(36*2)*/; height: auto; }
 
@@ -149,44 +150,90 @@ div.submit-incident a, .btn_submit {
 }
 
 /* primary nav */
-div#mainmenu { background:none; border:1px solid #e1e1e1; padding: 0; margin: 0; }
+div#mainmenu {
+	background:none;
+	padding: 0;
+	margin: 0;
+	width: auto;
+}
 div#mainmenu ul {
   
 }
 div#mainmenu ul li {
-  margin:0;
-  padding: 8px;
-  border: 1px solid #e1e1e1;
-  border-top: none;
-  border-bottom: none;
-  font-weight: bold;
+	margin:0;
+	border-top: none;
+	border-bottom: none;
+	font-weight: bold;
 }
-div#mainmenu ul li a { padding:3px 5px; -moz-border-radius: 3px; -webkit-border-radius: 3px; color: #4e4e4e; }
+div#mainmenu ul li a {
+	background-color: #EDEDED;
+	color: #444444;
+	-moz-transition: background 0.5s ease-in-out 0s;
+	border-radius: 6px 6px 0px 0px;
+	float: right;
+	text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+	text-decoration: none;
+	text-transform: uppercase;
+	margin-right: 5px;
+	padding-top: 9px;
+	padding-right: 16px;
+	padding-bottom: 9px;
+	padding-left: 16px;
+	border-left-width: 1px;
+	border-left-style: solid;
+	border-left-color: #ebebeb;
+}
 div#mainmenu ul li a:hover, div#mainmenu a.active {
   
 }
 
 /* filter box */
-#report-map-filter-box { position:absolute; z-index:1000; top: 90px;}
+#report-map-filter-box {
+	position:absolute;
+	z-index:1000;
+	top: 90px;
+	color: #FFF;
+}
 
 div#right { position:absolute; z-index:1000; display: none; }
 
 .map-menu-box {
-  position:absolute;
-  overflow:auto;
-  background:#f9f7f8;
-  -moz-border-radius: 3px; -webkit-border-radius: 3px; 
-  -moz-box-shadow:0px 1px 1.5px #424041; -webkit-box-shadow:0px 1px 1.5px #424041; box-shadow:0px 1px 1.5px #424041;
+	background: repeat scroll 0 0 #454545;
+	background-image: -moz-linear-gradient(bottom, #454545 48%, #5E5E5E 100%);
+	background-image: -webkit-linear-gradient(bottom, #454545 48%, #5E5E5E 100%);
+    border: 1px solid #313436;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0 1px 2px #000000;
+    color: #FFFFFF;
+    float: left;
+    left: 0;
+    margin-top: 10px;
+    padding: 10px;
+    position: absolute;
+    text-align: left;
+    text-shadow: 0 0 3px #000000;
+    top: 0;
+    width: 300px;
+    z-index: -2;
+	position:absolute;
+	overflow:auto;
   filter: progid:DXImageTransform.Microsoft.Shadow(strength=1.5, direction=180, color='#424041');
-  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(strength=1.5, Direction=180, Color='#424041')";
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(strength=1.5, Direction=180, Color='#424041')";
 }
-#the-filters { 
-  top:49px; left:59px;
-  width:300px;
-  
-  display:none; }
+#the-filters {
+	top:49px;
+	left:59px;
+	width:300px;
+	display:none;
+	color: #FFF;
+}
 
-#the-filters h3 { font-size:10px; color:#605f5d; text-transform:uppercase; margin-bottom:5px;; }
+#the-filters h3 {
+	font-size:10px;
+	text-transform:uppercase;
+	margin-bottom:5px;
+	color: #FFFFFF;
+}
   
   /* type and category toggle button */
   #filter-menu-toggle { position:absolute; top:20px; left:58px; width:120px; }
@@ -203,7 +250,26 @@ div#right { position:absolute; z-index:1000; display: none; }
   
   /* home page report type filters */
   #report-type-filter { overflow:auto; padding:5px; margin:0; } 
-  div.filters ul li { float:none; margin-bottom:2px; display:block; overflow:auto; }
+ div.filters {
+    font-size: 85%;
+    margin: 5px 0 15px;
+    text-transform: uppercase;
+	color: #FFF;
+}
+ div.filters ul {
+    list-style: none outside none;
+	  color: #FFF;
+}
+  div.filters li {
+   color: #FFF;
+}
+  div.filters ul li {
+	float:none;
+	margin-bottom:2px;
+	display:block;
+	overflow:auto;
+	color: #FFF;
+}
   div.filters ul li a { color:#000; font-weight:bold; padding:3px 5px 2px; margin:1px; font-size:10px; display:block; float:left; }
   div.filters ul li a span { font-size:10px; }
   div.filters ul li a:hover, div.filters ul li a.active { -moz-border-radius: 3px; -webkit-border-radius: 3px; display:block; float:left; padding:3px 5px 2px; background:none; border:1px solid #c2c2c2; color:inherit; margin:0; }
@@ -216,9 +282,15 @@ div#right { position:absolute; z-index:1000; display: none; }
   
   #kml_switch,
   #sharing_switch,
-  #how-to-report-box { display:none; position:absolute; top:49px; padding:5px; left:220px; background:#f9f7f8; width:175px;}
+  #how-to-report-box { display:none; position:absolute; top:49px; padding:5px; left:220px; background:#FFF; width:175px;}
   #sharing_switch { left:322px; }
-  #how-to-report-box { left:724px; padding-top:10px; }
+  #how-to-report-box { left:724px; padding-top:10px;
+		background: -moz-linear-gradient(bottom , #454545 68%, #5E5E5E 100%) repeat scroll 0 0 #454545;
+		background: -webkit-linear-gradient(bottom , #454545 68%, #5E5E5E 100%) repeat scroll 0 0 #454545;
+    border: 1px solid #313436;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0 1px 2px #000000;
+    color: #FFFFFF; }
     #how-to-report-box ol { margin-left:22px; }
     #how-to-report-box ol li { margin-bottom:5px; }
   
@@ -240,10 +312,10 @@ div.map { width:auto; height: 584px; border: 0; position:relative; }
 body.page-main .olControlPanZoomBar { margin-top: 95px;  }
 body.page-main div.olControlLayerSwitcher { margin-top: 80px; }
 body.page-main div#chicken { box-shadow: 0px 5px 20px 0px rgba(78,78,78,0.6); }
-body.page-main div.olPopupContent { background: #000; overflow: hidden; };
+body.page-main div.olPopupContent { background: #000; overflow: hidden; }
 
 /* home page timeline */
-div.slider-holder { width: auto; background: #fff; border: 1px solid #e1e1e1; padding: 16px; margin-bottom: 16px; }
+div.slider-holder { width: auto; }
 div.slider-holder #label_handle_startDate,
 div.slider-holder #label_handle_endDate,
 div.slider-holder #startDate,
@@ -260,31 +332,259 @@ div.content-container { background:transparent; padding:0; }
 ul.content-column { margin:0; }
 ul.content-column li { margin:0; float: none; }
 
-div.content-block { margin: 0; padding: 0; background: #fff; border: 1px solid #e1e1e1; border-top: none;}
+div.content-block {
+	background: #fff;
+	margin-bottom: 30px;
+	width: 97%;
+	-moz-border-radius-bottomright: 6px;
+	-moz-border-radius-bottomleft: 6px;
+	-webkit-border-radius: px px 6px 6px;
+	border-radius: px px 6px 6px;
+	border-right-width: 1px;
+	border-bottom-width: 1px;
+	border-left-width: 1px;
+	border-top-style: none;
+	border-right-style: solid;
+	border-bottom-style: solid;
+	border-left-style: solid;
+	border-right-color: #EBEBEB;
+	border-bottom-color: #EBEBEB;
+	border-left-color: #EBEBEB;
+}
 div.content-block h5 { /*float:left; position:absolute; top:-18px; left:-18px; padding:5px; border:7px solid #fff; background:#529bf5;*/ }
 div.content-block h5 span { display:none; }
 table.table-list thead th.date { width:20%; }
-div.content-block img { padding:0; margin:0; width: 160px; }
+div.content-block img {
+	margin:0;
+	width: 160px;
+	padding-top: 10px;
+}
 /* Reports block */
-div.content-block .report { float: left; width: 160px; height: 160px; padding-right: 16px; padding-left: 16px;}
+#rb_list-view .rb_report {
+	border-radius: 1px;
+	margin-bottom: 10px;
+	overflow: auto;
+	padding: 0;
+	position: relative;
+	border-top-width: 1px;
+	border-right-width: 1px;
+	border-left-width: 6px;
+	border-top-style: solid;
+	border-right-style: solid;
+	border-left-style: solid;
+	border-top-color: #EDEDED;
+	border-right-color: #EDEDED;
+	border-left-color: #FF2B06;
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: #fff;
+}
+div.r_description {
+	margin-bottom: 5px;
+	width: 450px;
+	color: #999;
+	line-height: 17px;
+}
+.r_details h3 {
+	margin-bottom: 0;
+	width: 365px;
+	padding-top: 6px;
+}
+.r_photo a {
+	border: 0px solid #C0C2B8;
+	display: inline-block;
+	padding-top: 10px;
+	padding-right: 2px;
+	padding-bottom: 2px;
+	padding-left: 2px;
+}
+p.r_date {
+	background: url("../../default/images/icon_sprite.png") no-repeat scroll 0 -133px #EDEDED;
+	padding: 3px 5px 4px 23px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	 font-family: "Droid Serif";
+    font-size: 12px;
+	text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+}
+div.content-block .report {
+	float: left;
+	width: 160px;
+	height: 160px;
+	padding-right: 25px;
+}
 div.content-block .report.col-0 { padding-left: 15px; }
 div.content-block .report.col-4 { padding-right: 15px; }
 div.content-block .report .report-image {width: 160px; height: 90px; overflow: hidden; background: #000; }
-div.content-block .report .report-title { }
-div.content-block .report .report-location { font-weight: bold; color: #4e4e4e }
-div.content-block .report .report-date { color: #4e4e4e; font-size: 0.8em; }
+div.content-block .report .report-title {
+	padding-left: 7px;
+}
+div.content-block .report .report-location {
+	font-weight: bold;
+	color: #4e4e4e;
+	padding-left: 7px;
+}
+div.content-block .report .report-date {
+	color: #4e4e4e;
+	font-size: 0.8em;
+	padding-top: 4px;
+	padding-left: 7px;
+}
 div.content-block .report a:hover {
   text-decoration: none;
 }
 div.content-block .report a:hover .report-title {
   text-decoration: underline;
 }
+.more {
+	background-color: #EDEDED;
+	color: #444444;
+	-moz-transition: background 0.5s ease-in-out 0s;
+	border-radius: 8px;
+	float: right;
+	font-family: "Droid Serif";
+	font-size: 12px;
+	letter-spacing: 1px;
+	line-height: 12px;
+	margin-bottom: 15px;
+	margin-right: 30px;
+	padding: 9px 16px;
+	text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+	text-decoration: none;
+	text-transform: uppercase;
+}
+.more hover{
+	background-color: #FF2B06;
+	color: #fff;
+}
+/* Link Toggle */ 
+.rb_nav-controls .link-toggle { margin-right:5px; }
+ul.link-toggle { display:block; }
+ul.link-toggle li { display:inline-block; }
+ul.link-toggle li a {
+	display:inline-block;
+	padding:3px 5px;
+	border:1px solid #404040;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	background-color: #8A8A8A;
+}
+ul.link-toggle li a:hover { background-color:#8a8a8a; }
+                
+ul.lt-icons-and-text li a { padding:3px 5px 3px 25px; }
+ul.lt-icons-only li a { overflow:hidden; text-indent:-23434px; }
+            
 
 /* reports listing page */
-#content .big-block { border:1px solid #fff; border-top:0; margin:0 10px; background:#EEEDEA; padding:18px; }
+#filters-box h2 {
+	border-bottom-style: none;
+    border-top: 3px solid #FF2B06;
+    margin-top: 0px;
+    padding-top: 10px;
+    color: #494949;
+}
+.ui-accordion .ui-accordion-content {
+	background: none repeat scroll 0 0 #FFFFFF;
+	border: 0px solid #EDEDED;
+	padding-top: 6px;
+}
+.ui-state-active {
+	background-color: #F2F2F2;
+	border: 1px solid #EDEDED;
+}
+.r-5 {
+    border-radius: 0px;
+}
+/* Pagination */
+.rb_nav-controls {
+	color: #666666;
+	height: 35px;
+	background-attachment: scroll;
+	background-image: none;
+	background-repeat: repeat;
+	background-position: 0 0;
+	background-color: #F2F2F2;
+	border-top-width: 1px;
+	border-bottom-width: 1px;
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-top-color: #FFF;
+	border-bottom-color: #FFF;
+	border-right-width: 1px;
+	border-left-width: 1px;
+	border-right-style: solid;
+	border-left-style: solid;
+	border-right-color: #FFF;
+	border-left-color: #FFF;
+	  -webkit-border-radius: 3px; 
+    -moz-border-radius: 3px; 
+}
+.rb_nav-controls ul.pager { display:block; padding:0; margin-left:5px;  }
+.rb_nav-controls ul.pager li { border:none; color:#fff; }
+.rb_nav-controls ul.pager li.first {margin:0 6px 0 0; padding:0;}
+.rb_nav-controls ul.pager li.last {}
+.rb_nav-controls ul.pager li a { 
+    display:inline-block; 
+    padding:3px 5px; 
+    color:#a2a8a5; 
+    border:1px solid #a2a8a5; 
+    -webkit-border-radius: 3px; 
+    -moz-border-radius: 3px; 
+    border-radius: 3px;
+}
+.rb_nav-controls ul.pager li a:hover,
+.rb_nav-controls ul.pager li.current a { color:#fff; background:#6c6c6c; }
+
+style.css (line 1963)
+.r-5 {
+    border-radius: 0px;
+}
+.heading {
+	position: relative;
+	border-bottom-style: none;
+	border-top-width: 3px;
+	border-top-style: solid;
+	border-top-color: #FF2B06;
+	padding-top: 10px;
+	margin-top: 15px;
+	margin-bottom: 30px;
+}
+#content .big-block {
+	padding:18px;
+	margin-top: 50px;
+	margin-right: 10px;
+	margin-bottom: 50px;
+	margin-left: 10px;
+	background-color: #FFF;
+	-moz-border-radius: 6px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #EBEBEB;
+}
 #reports-box { }
 #rb_list-view .rb_report {
   background: #fff;
+}
+a.filter-button {
+	background-color: #EDEDED;
+	color: #444444;
+	-moz-transition: background 0.5s ease-in-out 0s;
+	border-radius: 8px;
+	float: right;
+	font-family: "Droid Serif";
+	font-size: 12px;
+	letter-spacing: 1px;
+	line-height: 12px;
+	margin-bottom: 15px;
+	padding: 9px 16px;
+	text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+	text-decoration: none;
+	text-transform: uppercase;
 }
 
 /* single report page */
@@ -368,4 +668,6 @@ span.btn-icon { display:block; position:absolute; height:16px; width:16px; overf
   /* active state */
   .active-toggle .ic-right { background:transparent url(../images/bg_category-filter-controls.png) -32px -55px no-repeat; }
   
-#tagline { margin-bottom: 16px; }
+#tagline { margin-bottom: 16px; border-top: 3px solid #FF2A06;
+    margin-top: 8px;
+    padding-top: 12px; }
