Better RiverID handling in user admin
* Solves the majority of ushahidi/Crowdmap#143
* RiverID's are registered as soon as a new user is created
* Admins can no-longer change email addresses since that would mess with
  the river id association.  (w/ riverid enabled)
* Admins can no longer set passwords for users during creation
  (w/ riverid enabled)

--- a/media/css/admin/all.css
+++ b/media/css/admin/all.css
@@ -2563,3 +2563,9 @@ div.dp-popup td.disabled {
 	.sort-DESC {
 		background: url(../../img/admin/drag.gif) 0 -8px no-repeat;
 	}
+
+/* River ID fields in user admin */
+.riverid_email_already_set {
+	display: none;
+	clear: left;
+}
